--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 1.8
+      - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
-          java-version: '1.8'
-          distribution: 'adopt'
+          java-version: 11
+          distribution: temurin
+          java-package: jdk
+          architecture: x64
+          check-latest: false
+          server-id: github
           cache: maven
 
       - name: Build with maven
